fixed bug with invisible div

--- a/client/CSS/reservationBox.css
+++ b/client/CSS/reservationBox.css
@@ -104,8 +104,8 @@ td {
   justify-content: center;
   height: 40;
   color: white;
-  font-size: 16;
-  background: rgb(230, 83, 83);
+  font-size: 14;
+  background: rgb(255, 90, 95);
 }
 
 .popup {  
